services grid update

--- a/index.html
+++ b/index.html
@@ -143,36 +143,62 @@
   <a href="https://drive.google.com/drive/folders/1k_IXMx8JI1lqzwOKYDw_hAiuGj9oqvKV" target="_blank">Portfolio</a>
 </section>
 
-<!-- ✅ Services Grid -->
+<!-- ✅ Services Grid - Modern & Styled -->
 <section id="services" style="padding: 4rem 2rem; background: #fff;">
-  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 2.5rem;">What We Do</h2>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1100px; margin: 0 auto;">
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Brand Strategy</h3>
-      <p style="font-size: 0.95rem;">Positioning, tone of voice, identity & messaging for alcohol brands.</p>
+  <h2 style="text-align:center; font-size: 2.5rem; margin-bottom: 3rem; color: #000; font-weight: 700;">What We Do</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1200px; margin: 0 auto;">
+
+    <div style="flex: 1 1 300px; background: #000; color: #fff; padding: 2rem; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.15);">
+      <h3 style="color: #f6c301; font-size: 1.75rem; margin-bottom: 1rem;">1. CREATIVE DESIGN</h3>
+      <p style="font-size: 1rem; line-height: 1.6;">
+        We craft identity, design standout packaging,<br />
+        and create visual stories that leave a mark.
+      </p>
     </div>
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Social Media</h3>
-      <p style="font-size: 0.95rem;">Reels, grid posts, campaigns, and strategy with consistent brand tone.</p>
+
+    <div style="flex: 1 1 300px; background: #000; color: #fff; padding: 2rem; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.15);">
+      <h3 style="color: #f6c301; font-size: 1.75rem; margin-bottom: 1rem;">2. SOCIAL MEDIA</h3>
+      <p style="font-size: 1rem; line-height: 1.6;">
+        Reels, posts & strategy – we help your brand<br />
+        shine across every social platform.
+      </p>
     </div>
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Packaging & Design</h3>
-      <p style="font-size: 0.95rem;">Bottle labels, packs, shelf-ready creative for modern alcohol brands.</p>
+
+    <div style="flex: 1 1 300px; background: #000; color: #fff; padding: 2rem; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.15);">
+      <h3 style="color: #f6c301; font-size: 1.75rem; margin-bottom: 1rem;">3. CONTENT CREATION</h3>
+      <p style="font-size: 1rem; line-height: 1.6;">
+        Photos, videos, studio magic – our content<br />
+        brings your brand story to life.
+      </p>
     </div>
-    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
-         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
-         onmouseout="this.style.background='#000'; this.style.color='#fff';">
-      <h3 style="margin-bottom: 0.5rem;">Performance Marketing</h3>
-      <p style="font-size: 0.95rem;">Meta, Google, influencer & remarketing ads with end-to-end funnel design.</p>
+
+    <div style="flex: 1 1 300px; background: #000; color: #fff; padding: 2rem; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.15);">
+      <h3 style="color: #f6c301; font-size: 1.75rem; margin-bottom: 1rem;">4. DIGITAL MARKETING</h3>
+      <p style="font-size: 1rem; line-height: 1.6;">
+        Performance ads & eComm growth strategies<br />
+        for maximum impact and ROI.
+      </p>
     </div>
+
+    <div style="flex: 1 1 300px; background: #000; color: #fff; padding: 2rem; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.15);">
+      <h3 style="color: #f6c301; font-size: 1.75rem; margin-bottom: 1rem;">5. EVENT SERVICES</h3>
+      <p style="font-size: 1rem; line-height: 1.6;">
+        From logistics to immersive experiences,<br />
+        we bring your events to life seamlessly.
+      </p>
+    </div>
+
+    <div style="flex: 1 1 300px; background: #000; color: #fff; padding: 2rem; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.15);">
+      <h3 style="color: #f6c301; font-size: 1.75rem; margin-bottom: 1rem;">6. HOSPITALITY SERVICES</h3>
+      <p style="font-size: 1rem; line-height: 1.6;">
+        From menus to marketing, we shape<br />
+        hospitality brands to stand out.
+      </p>
+    </div>
+
   </div>
 </section>
+
 
 <!-- ✅ Clients Section -->
 <section id="clients" style="padding: 4rem 2rem; background: #fafafa;">
