--- a/index.html
+++ b/index.html
@@ -129,6 +129,30 @@
     opacity: 1;
   }
 }
+
+.logo-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .logo-grid img {
+    height: 60px;
+    object-fit: contain;
+    filter: grayscale(100%);
+    transition: all 0.3s ease;
+    transform: scale(1);
+    opacity: 0.8;
+  }
+
+  .logo-grid img:hover {
+    filter: grayscale(0%);
+    transform: scale(1.1);
+    opacity: 1;
+  }
   </style>
 </head>
 <body>
@@ -262,12 +286,27 @@
 <!-- ✅ Clients Section -->
 <section id="clients" style="padding: 4rem 2rem; background: #fafafa;">
   <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Brands We've Worked With</h2>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 2rem; max-width: 1200px; margin: 0 auto;">
-    <img src="client1.png" alt="Client 1" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client2.png" alt="Client 2" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client3.png" alt="Client 3" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client4.png" alt="Client 4" style="height: 50px; max-width: 120px; object-fit: contain;">
-    <img src="client5.png" alt="Client 5" style="height: 50px; max-width: 120px; object-fit: contain;">
+  <div class="logo-grid">
+    <img src="Brand logos/Asset 1.png" alt="Brand 1">
+    <img src="Brand logos/Asset 2.png" alt="Brand 2">
+    <img src="Brand logos/Asset 3.png" alt="Brand 3">
+    <img src="Brand logos/Asset 4.png" alt="Brand 4">
+    <img src="Brand logos/Asset 5.png" alt="Brand 5">
+    <img src="Brand logos/Asset 6.png" alt="Brand 6">
+    <img src="Brand logos/Asset 7.png" alt="Brand 7">
+    <img src="Brand logos/Asset 8.png" alt="Brand 8">
+    <img src="Brand logos/Asset 9.png" alt="Brand 9">
+    <img src="Brand logos/Asset 10.png" alt="Brand 10">
+    <img src="Brand logos/Asset 11.png" alt="Brand 11">
+    <img src="Brand logos/Asset 12.png" alt="Brand 12">
+    <img src="Brand logos/Asset 13.png" alt="Brand 13">
+    <img src="Brand logos/Asset 14.png" alt="Brand 14">
+    <img src="Brand logos/Asset 15.png" alt="Brand 15">
+    <img src="Brand logos/Asset 16.png" alt="Brand 16">
+    <img src="Brand logos/Asset 17.png" alt="Brand 17">
+    <img src="Brand logos/Asset 18.png" alt="Brand 18">
+    <img src="Brand logos/Asset 19.png" alt="Brand 19">
+    <img src="Brand logos/Asset 20.png" alt="Brand 20">
   </div>
 </section>
 
