--- a/index.html
+++ b/index.html
@@ -287,26 +287,26 @@
 <section id="clients" style="padding: 4rem 2rem; background: #fafafa;">
   <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Brands We've Worked With</h2>
   <div class="logo-grid">
-    <img src="Brand logos/Asset 1.png" alt="Brand 1">
-    <img src="Brand logos/Asset 2.png" alt="Brand 2">
-    <img src="Brand logos/Asset 3.png" alt="Brand 3">
-    <img src="Brand logos/Asset 4.png" alt="Brand 4">
-    <img src="Brand logos/Asset 5.png" alt="Brand 5">
-    <img src="Brand logos/Asset 6.png" alt="Brand 6">
-    <img src="Brand logos/Asset 7.png" alt="Brand 7">
-    <img src="Brand logos/Asset 8.png" alt="Brand 8">
-    <img src="Brand logos/Asset 9.png" alt="Brand 9">
-    <img src="Brand logos/Asset 10.png" alt="Brand 10">
-    <img src="Brand logos/Asset 11.png" alt="Brand 11">
-    <img src="Brand logos/Asset 12.png" alt="Brand 12">
-    <img src="Brand logos/Asset 13.png" alt="Brand 13">
-    <img src="Brand logos/Asset 14.png" alt="Brand 14">
-    <img src="Brand logos/Asset 15.png" alt="Brand 15">
-    <img src="Brand logos/Asset 16.png" alt="Brand 16">
-    <img src="Brand logos/Asset 17.png" alt="Brand 17">
-    <img src="Brand logos/Asset 18.png" alt="Brand 18">
-    <img src="Brand logos/Asset 19.png" alt="Brand 19">
-    <img src="Brand logos/Asset 20.png" alt="Brand 20">
+    <img src="Asset 1.png" alt="Brand 1">
+    <img src="Asset 2.png" alt="Brand 2">
+    <img src="Asset 3.png" alt="Brand 3">
+    <img src="Asset 4.png" alt="Brand 4">
+    <img src="Asset 5.png" alt="Brand 5">
+    <img src="Asset 6.png" alt="Brand 6">
+    <img src="Asset 7.png" alt="Brand 7">
+    <img src="Asset 8.png" alt="Brand 8">
+    <img src="Asset 9.png" alt="Brand 9">
+    <img src="Asset 10.png" alt="Brand 10">
+    <img src="Asset 11.png" alt="Brand 11">
+    <img src="Asset 12.png" alt="Brand 12">
+    <img src="Asset 13.png" alt="Brand 13">
+    <img src="Asset 14.png" alt="Brand 14">
+    <img src="Asset 15.png" alt="Brand 15">
+    <img src="Asset 16.png" alt="Brand 16">
+    <img src="Asset 17.png" alt="Brand 17">
+    <img src="Asset 18.png" alt="Brand 18">
+    <img src="Asset 19.png" alt="Brand 19">
+    <img src="Asset 20.png" alt="Brand 20">
   </div>
 </section>
 
