--- a/index.html
+++ b/index.html
@@ -131,28 +131,40 @@
 }
 
 .logo-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+}
 
+.logo-grid img {
+  max-height: 60px;
+  width: auto;
+  object-fit: contain;
+  transition: all 0.3s ease;
+  filter: grayscale(100%);
+  opacity: 0.85;
+}
+
+.logo-grid img:hover {
+  transform: scale(1.1);
+  filter: grayscale(0%);
+  opacity: 1;
+}
+
+/* ✅ Mobile Optimization */
+@media (max-width: 768px) {
   .logo-grid img {
-    height: 60px;
-    object-fit: contain;
-    filter: grayscale(100%);
-    transition: all 0.3s ease;
-    transform: scale(1);
-    opacity: 0.8;
+    max-height: 40px;
   }
-
-  .logo-grid img:hover {
-    filter: grayscale(0%);
-    transform: scale(1.1);
-    opacity: 1;
+  .logo-grid {
+    gap: 1rem;
+    padding: 0.5rem;
   }
+}
   </style>
 </head>
 <body>
