--- a/index.html
+++ b/index.html
@@ -179,119 +179,88 @@
   <a href="https://drive.google.com/drive/folders/1k_IXMx8JI1lqzwOKYDw_hAiuGj9oqvKV" target="_blank">Portfolio</a>
 </section>
 
-<<!-- ✅ Animated Number Services Section -->
-<section id="services" style="padding: 4rem 2rem; background: #fff; font-family: 'Segoe UI', sans-serif;">
-  <h2 style="text-align:center; font-size: 2.5rem; margin-bottom: 3rem; color: #000; font-weight: 700;">What We Do</h2>
-  <div class="service-grid">
-    <div class="service-block" style="animation-delay: 0s;">
-      <h3><span class="num">1</span> Creative Design</h3>
-      <p>We craft identity, design standout packaging,<br>and create visual stories that leave a mark.</p>
+<section id="services" style="padding: 4rem 2rem; background: #fff;">
+  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 2rem;">What We Do</h2>
+  <div class="accordion">
+    <div class="accordion-item">
+      <button class="accordion-button">1. Creative Design</button>
+      <div class="accordion-content">
+        <p>We craft identity, design standout packaging,<br>and create visual stories that leave a mark.</p>
+      </div>
     </div>
-    <div class="service-block" style="animation-delay: 0.2s;">
-      <h3><span class="num">2</span> Social Media</h3>
-      <p>Reels, posts & strategy – we help your brand<br>shine across every social platform.</p>
+    <div class="accordion-item">
+      <button class="accordion-button">2. Social Media</button>
+      <div class="accordion-content">
+        <p>Reels, posts & strategy — we help your brand shine across every social platform.</p>
+      </div>
     </div>
-    <div class="service-block" style="animation-delay: 0.4s;">
-      <h3><span class="num">3</span> Content Creation</h3>
-      <p>Photos, videos, studio magic – our content<br>brings your brand story to life.</p>
+    <div class="accordion-item">
+      <button class="accordion-button">3. Content Creation</button>
+      <div class="accordion-content">
+        <p>Photos, videos, studio magic — our content brings your brand story to life.</p>
+      </div>
     </div>
-    <div class="service-block" style="animation-delay: 0.6s;">
-      <h3><span class="num">4</span> Digital Marketing</h3>
-      <p>Performance ads & eComm growth strategies<br>for maximum impact and ROI.</p>
+    <div class="accordion-item">
+      <button class="accordion-button">4. Digital Marketing</button>
+      <div class="accordion-content">
+        <p>Performance ads & eComm growth strategies for maximum impact and ROI.</p>
+      </div>
     </div>
-    <div class="service-block" style="animation-delay: 0.8s;">
-      <h3><span class="num">5</span> Event Services</h3>
-      <p>From logistics to immersive experiences,<br>we bring your events to life seamlessly.</p>
+    <div class="accordion-item">
+      <button class="accordion-button">5. Event Services</button>
+      <div class="accordion-content">
+        <p>From logistics to immersive experiences, we bring your events to life seamlessly.</p>
+      </div>
     </div>
-    <div class="service-block" style="animation-delay: 1s;">
-      <h3><span class="num">6</span> Hospitality Services</h3>
-      <p>From menus to marketing, we shape<br>hospitality brands to stand out.</p>
+    <div class="accordion-item">
+      <button class="accordion-button">6. Hospitality Services</button>
+      <div class="accordion-content">
+        <p>From menus to marketing, we shape hospitality brands to stand out.</p>
+      </div>
     </div>
   </div>
 </section>
 
 <style>
-  .service-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+  .accordion {
+  max-width: 800px;
+  margin: 0 auto;
+}
 
-  .service-block {
-    flex: 1 1 300px;
-    background: #111;
-    color: #fff;
-    padding: 2.2rem;
-    border-radius: 18px;
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
-    position: relative;
-    overflow: hidden;
-    opacity: 0;
-    transform: translateY(40px);
-    animation: fadeInUp 0.8s forwards;
-  }
+.accordion-item {
+  border-bottom: 1px solid #ddd;
+}
 
-  .service-block:hover {
-    background: #f6c301;
-    color: #000;
-    transform: scale(1.03);
-    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.25);
-  }
+.accordion-button {
+  background: none;
+  border: none;
+  width: 100%;
+  text-align: left;
+  padding: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #000;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
 
-  .service-block h3 {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-    font-weight: 700;
-    letter-spacing: 0.5px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    transition: color 0.3s ease;
-  }
+.accordion-button:hover {
+  background: #f6c301;
+  color: #000;
+}
 
-  .service-block:hover h3 {
-    color: #000;
-  }
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  padding: 0 1rem;
+  font-size: 1rem;
+  transition: max-height 0.3s ease, padding 0.3s ease;
+}
 
-  .service-block h3 .num {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #f6c301;
-    animation: bounceIn 1s ease-in-out;
-    min-width: 30px;
-  }
-
-  .service-block:hover h3 .num {
-    color: #000;
-  }
-
-  .service-block p {
-    font-size: 1rem;
-    line-height: 1.6;
-    transition: color 0.3s ease;
-  }
-
-  @keyframes fadeInUp {
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-
-  @keyframes bounceIn {
-    0% { transform: scale(0.8); opacity: 0; }
-    60% { transform: scale(1.2); opacity: 1; }
-    100% { transform: scale(1); }
-  }
-
-  @media (max-width: 768px) {
-    .service-block {
-      flex: 1 1 100%;
-    }
-  }
+.accordion-item.active .accordion-content {
+  max-height: 300px;
+  padding: 1rem;
+}
 </style>
 
 
@@ -392,6 +361,21 @@
 
   slides.forEach(slide => {
     observer.observe(slide);
+  });
+</script>
+<script>
+  document.querySelectorAll('.accordion-button').forEach(button => {
+    button.addEventListener('click', () => {
+      const item = button.parentElement;
+
+      // Close all other open items
+      document.querySelectorAll('.accordion-item').forEach(i => {
+        if (i !== item) i.classList.remove('active');
+      });
+
+      // Toggle current item
+      item.classList.toggle('active');
+    });
   });
 </script>
 
