--- a/index.html
+++ b/index.html
@@ -179,50 +179,47 @@
   <a href="https://drive.google.com/drive/folders/1k_IXMx8JI1lqzwOKYDw_hAiuGj9oqvKV" target="_blank">Portfolio</a>
 </section>
 
-<section id="services" class="services-section">
-  <div class="services-header">
-    <h2>What We Do</h2>
+<!-- ✅ What We Do Section (Modern Two-Column with Dropdowns) -->
+<section id="services" class="what-we-do-section">
+  <div class="wwd-left">
+    <h2>Our Core Offerings</h2>
+    <p>At Tipple Works Co., we craft and execute marketing solutions for alcohol brands. From identity and content to performance and events, we make brands unmissable.</p>
   </div>
-  <div class="services-list">
-    <div class="service-item">
-      <button class="service-toggle">1. Creative Design</button>
-      <div class="service-content">
-        <p>We craft identity, design standout packaging, and create visual stories that leave a mark.</p>
+  <div class="wwd-right">
+    <div class="wwd-item">
+      <button class="dropdown-btn">1. Creative Design ▾</button>
+      <div class="dropdown-content">
+        <p>We craft identity, design standout packaging,<br>and create visual stories that leave a mark.</p>
       </div>
     </div>
-
-    <div class="service-item">
-      <button class="service-toggle">2. Social Media</button>
-      <div class="service-content">
-        <p>Reels, posts & strategy – we help your brand shine across every social platform.</p>
+    <div class="wwd-item">
+      <button class="dropdown-btn">2. Social Media ▾</button>
+      <div class="dropdown-content">
+        <p>Reels, posts & strategy – we help your brand<br>shine across every social platform.</p>
       </div>
     </div>
-
-    <div class="service-item">
-      <button class="service-toggle">3. Content Creation</button>
-      <div class="service-content">
-        <p>Photos, videos, studio magic – our content brings your brand story to life.</p>
+    <div class="wwd-item">
+      <button class="dropdown-btn">3. Content Creation ▾</button>
+      <div class="dropdown-content">
+        <p>Photos, videos, studio magic – our content<br>brings your brand story to life.</p>
       </div>
     </div>
-
-    <div class="service-item">
-      <button class="service-toggle">4. Digital Marketing</button>
-      <div class="service-content">
-        <p>Performance ads & eComm growth strategies for maximum impact and ROI.</p>
+    <div class="wwd-item">
+      <button class="dropdown-btn">4. Digital Marketing ▾</button>
+      <div class="dropdown-content">
+        <p>Performance ads & eComm growth strategies<br>for maximum impact and ROI.</p>
       </div>
     </div>
-
-    <div class="service-item">
-      <button class="service-toggle">5. Event Services</button>
-      <div class="service-content">
-        <p>From logistics to immersive experiences, we bring your events to life seamlessly.</p>
+    <div class="wwd-item">
+      <button class="dropdown-btn">5. Event Services ▾</button>
+      <div class="dropdown-content">
+        <p>From logistics to immersive experiences,<br>we bring your events to life seamlessly.</p>
       </div>
     </div>
-
-    <div class="service-item">
-      <button class="service-toggle">6. Hospitality Services</button>
-      <div class="service-content">
-        <p>From menus to marketing, we specialize in making hospitality brands stand out.</p>
+    <div class="wwd-item">
+      <button class="dropdown-btn">6. Hospitality Services ▾</button>
+      <div class="dropdown-content">
+        <p>From menus to marketing, we shape hospitality brands<br>to stand out.</p>
       </div>
     </div>
   </div>
@@ -270,69 +267,85 @@
 }
 
 <style>
-  /* Existing styles */
+  .what-we-do-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 4rem 2rem;
+  background: #fff;
+  color: #000;
+  gap: 3rem;
+}
 
-  /* 👇 Paste accordion styles below this line */
-  .services-section {
-    padding: 4rem 2rem;
-    max-width: 900px;
-    margin: 0 auto;
-  }
+.wwd-left {
+  flex: 1 1 300px;
+  max-width: 500px;
+}
 
-  .services-header h2 {
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 3rem;
-    font-weight: 700;
-  }
+.wwd-left h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  font-weight: 800;
+}
 
-  .services-list {
-    display: flex;
+.wwd-left p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+
+.wwd-right {
+  flex: 1 1 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.wwd-item {
+  border-bottom: 1px solid #ddd;
+}
+
+.dropdown-btn {
+  width: 100%;
+  text-align: left;
+  background: none;
+  border: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  cursor: pointer;
+  padding: 1rem;
+  transition: background 0.3s ease;
+  color: #000;
+}
+
+.dropdown-btn:hover {
+  background: #f6c301;
+  color: #000;
+}
+
+.dropdown-content {
+  display: none;
+  padding: 0 1rem 1rem 1rem;
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.5;
+}
+
+.wwd-item.active .dropdown-content {
+  display: block;
+}
+
+/* Mobile Optimization */
+@media (max-width: 768px) {
+  .what-we-do-section {
     flex-direction: column;
-    gap: 1.5rem;
   }
 
-  .service-item {
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 1rem;
+  .wwd-left, .wwd-right {
+    max-width: 100%;
   }
+}
 
-  .service-toggle {
-    width: 100%;
-    background: none;
-    border: none;
-    font-size: 1.4rem;
-    text-align: left;
-    font-weight: 600;
-    padding: 1rem 0;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: color 0.3s ease;
-  }
-
-  .service-toggle::after {
-    content: "▾";
-    font-size: 1.2rem;
-    transition: transform 0.3s ease;
-  }
-
-  .service-toggle.active::after {
-    transform: rotate(180deg);
-  }
-
-  .service-content {
-    display: none;
-    padding: 0.5rem 0 0.5rem 0.5rem;
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #444;
-  }
-
-  .service-content.open {
-    display: block;
-  }
 </style>
 
 <!-- ✅ Clients Section -->
@@ -456,6 +469,15 @@
       const content = toggle.nextElementSibling;
       toggle.classList.toggle('active');
       content.classList.toggle('open');
+    });
+  });
+</script>
+<script>
+  const dropdowns = document.querySelectorAll('.dropdown-btn');
+  dropdowns.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const parent = btn.parentElement;
+      parent.classList.toggle('active');
     });
   });
 </script>
