added older section back

--- a/index.html
+++ b/index.html
@@ -272,22 +272,62 @@
 <section id="clients" style="padding: 4rem 2rem; background: #fafafa;">
   <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Brands We've Worked With</h2>
   <div class="logo-grid">
-    <!-- Add your logo images here -->
     <img src="Asset 1.png" alt="Brand 1">
     <img src="Asset 2.png" alt="Brand 2">
-    <!-- ... up to Asset 20.png -->
+    <img src="Asset 3.png" alt="Brand 3">
+    <img src="Asset 4.png" alt="Brand 4">
+    <img src="Asset 5.png" alt="Brand 5">
+    <img src="Asset 6.png" alt="Brand 6">
+    <img src="Asset 7.png" alt="Brand 7">
+    <img src="Asset 8.png" alt="Brand 8">
+    <img src="Asset 9.png" alt="Brand 9">
+    <img src="Asset 10.png" alt="Brand 10">
+    <img src="Asset 11.png" alt="Brand 11">
+    <img src="Asset 12.png" alt="Brand 12">
+    <img src="Asset 13.png" alt="Brand 13">
+    <img src="Asset 14.png" alt="Brand 14">
+    <img src="Asset 15.png" alt="Brand 15">
+    <img src="Asset 16.png" alt="Brand 16">
+    <img src="Asset 17.png" alt="Brand 17">
+    <img src="Asset 18.png" alt="Brand 18">
+    <img src="Asset 19.png" alt="Brand 19">
+    <img src="Asset 20.png" alt="Brand 20">
   </div>
 </section>
 
-<!-- ✅ Contact Section -->
-<section id="contact" style="padding: 4rem 2rem; background: #f8f8f8;">
+<!-- ✅ Testimonials Section -->
+<section id="testimonials" style="padding: 4rem 2rem; background: #fff;">
+  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 3rem;">What Our Clients Say</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1000px; margin: 0 auto;">
+    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
+      <p style="font-style: italic;">“Tipple Works helped us break into the Indian market with a story that truly resonated. Their ideas are bold and their execution is seamless.”</p>
+      <p style="margin-top: 1rem; font-weight: bold;">– Alex J., Founder, Craft Spirits UK</p>
+    </div>
+    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
+      <p style="font-style: italic;">“From packaging to performance campaigns, they absolutely nailed our vibe. We've never looked sharper as a brand.”</p>
+      <p style="margin-top: 1rem; font-weight: bold;">– Neha R., Marketing Head, Sober Soda Co.</p>
+    </div>
+    <div style="flex: 1 1 300px; padding: 2rem; border: 1px solid #eee; border-radius: 10px; background: #fafafa;">
+      <p style="font-style: italic;">“They understand alcohol marketing like nobody else. Fast, smart and always on point.”</p>
+      <p style="margin-top: 1rem; font-weight: bold;">– Siddharth M., Brand Lead, The Dram District</p>
+    </div>
+  </div>
+</section>
+
+<!-- ✅ Modernized Contact Form -->
+<section id="contact" style="padding: 4rem 2rem; background: #f8f8f8; font-family: sans-serif;">
   <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Let’s Talk</h2>
   <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 600px; margin: 0 auto; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.05);">
-    <label for="email">Email Address</label>
-    <input type="email" id="email" name="email" required style="width: 100%; padding: 0.75rem 1rem; margin-bottom: 1.5rem;" />
-    <label for="message">Your Message</label>
-    <textarea id="message" name="message" required rows="6" style="width: 100%; padding: 0.75rem 1rem;"></textarea>
-    <button type="submit" style="margin-top: 1.5rem; background-color: #000; color: #fff; padding: 0.9rem 2rem; font-weight: bold; border: none; border-radius: 50px;">Send →</button>
+    <label for="email" style="display: block; font-weight: bold; margin-bottom: 0.5rem;">Email Address</label>
+    <input type="email" id="email" name="email" required
+      style="width: 100%; padding: 0.75rem 1rem; margin-bottom: 1.5rem; border: 1px solid #ccc; border-radius: 8px; font-size: 1rem;" />
+    <label for="message" style="display: block; font-weight: bold; margin-bottom: 0.5rem;">Your Message</label>
+    <textarea id="message" name="message" required rows="6"
+      style="width: 100%; padding: 0.75rem 1rem; border: 1px solid #ccc; border-radius: 8px; font-size: 1rem; resize: vertical;"></textarea>
+    <button type="submit"
+      style="margin-top: 1.5rem; background-color: #000; color: #fff; padding: 0.9rem 2rem; font-size: 1rem; font-weight: bold; border: none; border-radius: 50px; cursor: pointer; transition: background-color 0.3s ease;">
+      Send →
+    </button>
   </form>
 </section>
 
