Text push what we do

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tipple Works Co. Deck</title>
+  <title>Tipple Works Co.</title>
 
   <!-- ✅ Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSZN4E7TRS"></script>
@@ -225,8 +225,8 @@
 <!-- ✅ What We Do Section -->
 <section id="services" class="what-we-do-section">
   <div class="wwd-left">
-    <h2>Our Core Offerings</h2>
-    <p>At Tipple Works Co., we craft and execute marketing solutions for alcohol brands. From identity and content to performance and events, we make brands unmissable.</p>
+    <h2>What We Do</h2>
+    <p>YOU INNOVATE, WE AMPLIFY! FULL-STACK MARKETING, ZERO HASSLE.</p>
   </div>
   <div class="wwd-right">
     <div class="wwd-item">
